# opengemini-client-python

./: .gitignore  .linelint.yml  .pylintrc  README.md  README_CN.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: line_lint.yml  py_lint.yml  py_test.yml
opengemini_client/: __init__.py  client.py  client_impl.py  client_impl_test.py  common.py  database_test.py  exceptions.py  grpc_client.py  grpc_client_test.py  grpc_write_test.py  measurement.py  measurement_test.py  models.py  ping_test.py  point.py  query.py  query_result.py  query_test.py  record_transform.py  retention_policy.py  retention_policy_test.py  series.py  test_utils.py  url_const.py  utils.py  write_test.py
opengemini_client/codec/: binary_decoder.py  binary_encoder.py  size.py
opengemini_client/proto/: write.proto  write_pb2.py  write_pb2.pyi  write_pb2_grpc.py
opengemini_client/record/: __init__.py  colval.py  field.py  record.py
