[metadata]
name = opengemini_client
version = 0.0.1
description = opengemini_client is a python client for opengemini
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/openGemini/opengemini-client-python.git
author = ZhangJian He
author_email = hezhangjian97@gmail.com
license = Apache License 2.0

[options]
packages = find:

[options.packages.find]
where = opengemini_client
